# cMake_project

./: CMakeLists.txt  README.md  build.bat  cMake_project.sln  cMake_project.vcxproj  cMake_project.vcxproj.filters  local_library.h
Test/: piTestCore.py  piTestFactory.py  testCase.py
lib/: local_library.h
src/: local_library.c  main.c  testDll.c
